# MBPPtoLean

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/formatting/: ruff.toml
config/linting/: ruff.toml
configs/: pipeline.toml
debug/: __init__.py  logging_config.py  state.py  status.py
docs/architecture/: overview.md
docs/diagrams/: phase4_flow.md
docs/pseudocode/: phase4_formalize.md
docs/requirements/: functional.md  nonfunctional.md
docs/specs/: phase1_export.md  phase2_mutate.md  phase3_solve.md  phase4_formalize.md  phase5_verify.md
docs/standards/: coding.md
src/mbpp_pipeline/: __init__.py  cli.py  config.py  runner.py
src/mbpp_pipeline/phase1/: export_mbpp.py  schema.py  validate.py
src/mbpp_pipeline/phase2/: adversarial.py  mutations.py  schema.py
src/mbpp_pipeline/phase3/: prompts.py  schema.py  solver.py
src/mbpp_pipeline/phase4/: baseline_agent.py  bridge.py  lean_builder.py  self_debug.py  self_improve.py  signatures.py  trace_agent.py
src/mbpp_pipeline/phase5/: report.py  verifier.py
src/mbpp_pipeline/utils/: python_exec.py  treesitter.py
tests/integration/: test_phase1_export.py  test_phase2_mutations.py
tests/property/: test_phase1_schema.py  test_phase2_mutations.py  test_phase3_schema.py  test_phase4_bridge.py
