[project]
name = "mbpp-lean-pipeline"
version = "0.1.0"
description = "MBPP to Lean 4 adversarial autoformalization pipeline"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.0",
    "dspy==3.1.2",
    "google-cloud-aiplatform>=1.92.0",
    "jinja2>=3.1.6",
    "litellm>=1.40.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "prefect==3.4.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.9.4",
    "setuptools>=75.8.0",
    "tqdm>=4.67.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "typer>=0.15.1",
    "verina @ file:///app/verina",
]

[project.scripts]
mbpp-pipeline = "mbpp_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mbpp_pipeline"]

[tool.ruff]
extend-exclude = ["data"]
